# lynma01.github.io

./: .gitignore  .gitpod.yml  README.md  _quarto.yml  about.qmd  devbox.json  index.qmd  lynma01.github.io.qmd  pyproject.toml  requirements.txt
archive/agriculture/: agriculture.qmd
archive/business_as_code/: business_as_code.qmd
archive/climate_change_and_the_threat_to_civilization/: climate_change.qmd
archive/process_mining/: process_mining.qmd  scratch_data.ipynb
archive/space_bureacracy/: space_bureacrat.qmd
docs/: CNAME  about.html  index.html  listings.json  lynma01.github.io.html  search.json
docs/posts/: home-listing.json  home.html  lynma01.github.io.html
posts/: about.qmd  home.qmd  lynma01.github.io.qmd
posts/Climate change and the threat to civilization/: climate_change.ipynb  climate_change.qmd
posts/Space Bureacracy - Series Plan/: space_bureacrat.qmd
posts/agriculture/: agriculture.ipynb  agriculture.qmd
posts/business as code/: business_as_code.qmd
posts/business_as_code/: business_as_code.qmd  business_as_code.quarto_ipynb  project.md
posts/classes_vs_tables/: classes_vs_tables.qmd
posts/dagster_mlops/: scikit learn.ipynb
posts/dyson_sphere_program/: dyson_sphere_program.qmd
posts/grabby_aliens/: grabby_aliens.qmd
posts/graph factory/: graph_factory.qmd
posts/hello world/: hello_world.qmd
posts/hello_iris/: hello_iris.ipynb  hello_iris.qmd
posts/mlops/: mlops.qmd
posts/models_games_and_simulations/: models_games_and_simulations.qmd
posts/process mining/: process_mining.qmd
posts/shilling_for_elixir/: shilling_for_elixir.qmd
posts/space_bureacracy/: space_bureacrat.qmd
posts/whos_an_analyst/: analyst.qmd
(+40 files in other folders)
