[tool.poetry]
name = "lynma01-github-io"
version = "0.1.0"
description = ""
authors = ["lynma01 <lynma01@gmail.com>"]
readme = "README.md"
packages = [{include = "lynma01"}]

[tool.poetry.dependencies]
python = "^3.12"
quarto = "^0.1.0"
jupyter = "^1.0.0"
numpy = "^1.26.2"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
polars = "^0.19.16"
ucimlrepo = "^0.0.3"
pandas = "^2.1.3"
graphviz = "^0.20.1"
pyarrow = "^14.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
