[tool.poetry]
name = "lynma01-github-io"
version = "0.1.0"
description = ""
authors = ["lynma01 <lynma01@gmail.com>"]
packages = [{include = "lynma01"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
polars = "^0.19.16"
pyarrow = "^14.0.1"
jupyter-cache = "^1.0.0"
faker = "^22.0.0"
attrs = "^23.2.0"
ipykernel = "^6.29.0"
altair = "^5.4.1"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
